--- a/css/style.scss
+++ b/css/style.scss
@@ -63,6 +63,7 @@ a, a:hover, a:link, a:visited
 	color: white;
 	position: relative;
 	transition: 0.5s all;
+	z-index: 1;
 	
 	&::before, &::after
 	{
@@ -118,7 +119,7 @@ a, a:hover, a:link, a:visited
 	background: rgba(255, 255, 255, 0.05);
 	box-shadow: inset 1px 1px 1px rgba(255, 255, 255, 0.75), 1px 1px 1px black;
 	color: white;
-	margin-top: 18em;
+	margin-top: 15em;
 	padding: 4em 2em;
 	position: relative;
 	text-transform: uppercase;
@@ -134,20 +135,6 @@ a, a:hover, a:link, a:visited
 			size: 2em;
 			family: $font-nav;
 		}
-	}
-	.marks
-	{
-		line-height: 2em;
-		position: absolute;
-		font-size: 8em;
-		top: 0%;
-		transform: scale3d(0, 0, 0);
-		transition: 1s all;
-		font-family: $font-nav;
-	}
-	&:hover .marks
-	{
-		transform: scale3d(1, 1, 1);
 	}
 }
 .arrow
@@ -407,6 +394,10 @@ a, a:hover, a:link, a:visited
 .fadeInDown
 {
 	animation: fadeInDown 0.3s;
+}
+.scaleInX
+{
+	animation: 1s scaleInX;
 }
 @keyframes pulseDown
 {
