--- a/css/style.scss
+++ b/css/style.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald:700&subset=latin-ext');
 @import url('https://fonts.googleapis.com/css?family=Raleway&subset=latin-ext');
 //----------------zmienne---------------------
-$bg-nav: rgba(0, 0, 0, 0.75);
+$bg-nav: rgba(0, 0, 0, 0.25);
 $bg-home: url(../images/bg.jpg) no-repeat;
 $transition: 0.3s all;
 $font-nav: 'Roboto', sans-serif;
@@ -30,7 +30,6 @@ a, a:hover, a:link, a:visited
 }
 .main-nav
 {
-	background: $bg-nav;
 	display: flex;
 	flex-flow: row wrap;
 	position: fixed;
@@ -51,6 +50,25 @@ a, a:hover, a:link, a:visited
 {
 	margin: 0;
 	padding: 0;
+
+	.active
+	{
+		position: relative;
+
+		&::after
+		{
+			content: "";
+			position: absolute;
+			width: 100%;
+			height: 1px;
+			bottom: 0;
+			left: 0;
+			background: $color-logo;
+			transform-origin: 50% 0;
+			transition: 0.25s all;
+			animation: 0.35s scaleInX;
+		}
+	}
 }
 .main-nav ul li
 {
@@ -334,32 +352,32 @@ a, a:hover, a:link, a:visited
 	.html
 	{
 		background: linear-gradient(to right, $html-color, lighten($html-color, 15%));
-		border: 2px solid $html-color;
+		border: 2px solid darken($html-color, 5%);
 	}
 	.css
 	{
 		background: linear-gradient(to right, $css-color, lighten($css-color, 15%));
-		border: 2px solid $css-color;
+		border: 2px solid darken($css-color, 5%);
 	}
 	.js
 	{
 		background: linear-gradient(to right, $js-color, lighten($js-color, 15%));
-		border: 2px solid $js-color;
+		border: 2px solid darken($js-color, 5%);
 	}
 	.jquery
 	{
 		background: linear-gradient(to right, $jquery-color, lighten($jquery-color, 15%));
-		border: 2px solid $jquery-color;
+		border: 2px solid darken($jquery-color, 5%);
 	}
 	.php
 	{
 		background: linear-gradient(to right, $php-color, lighten($php-color, 15%));
-		border: 2px solid $php-color;
+		border: 2px solid darken($php-color, 5%);
 	}
 	.symfony
 	{
 		background: linear-gradient(to right, $symfony-color, lighten($symfony-color, 15%));
-		border: 2px solid $symfony-color;
+		border: 2px solid darken($symfony-color, 5%);
 	}
 }
 .page-layer
@@ -377,6 +395,30 @@ a, a:hover, a:link, a:visited
 		color: white;
 		text-transform: uppercase;
 		margin-bottom: 1em;
+	}
+}
+.nav-normal
+{
+	background: rgba(0, 0, 0, 0.65);
+	& ul li a
+	{
+		line-height: 1.5em;
+	}
+	& .logo
+	{
+		font-size: 1em;
+	}
+}
+.nav-expanded
+{
+	background: rgba(0, 0, 0, 0.25);
+	& ul li a
+	{
+		line-height: 3.2em;
+	}
+	& .logo
+	{
+		font-size: 1.5em;
 	}
 }
 .transition
@@ -402,6 +444,41 @@ a, a:hover, a:link, a:visited
 .scaleIn
 {
 	animation: 1s scaleIn;
+}
+.bounceIn
+{
+	animation: 1s bounceIn;
+}
+@media (max-width: 991px)
+{
+	.page-layer
+	{
+		padding: 2em 1em;
+
+		.center-block
+		{
+			width: 90%!important;
+		}
+		.layer-head
+		{
+			font-size: 3em;
+		}
+	}
+	.home-block
+	{
+		margin-top: 10em;
+	}
+	.page-layer-1 > .center-block:not(:first-child)
+	{
+		margin-top: 5em!important;
+		margin-bottom: 2em;
+	}
+	.main-nav ul li
+	{
+		display: block;
+		width: 100%;
+		text-align: center;
+	}
 }
 @keyframes pulseDown
 {
