--- a/css/style.scss
+++ b/css/style.scss
@@ -10,8 +10,9 @@ $font-head: 'Oswald', sans-serif;
 $font-body: 'Raleway', sans-serif;
 $color-logo: rgb(50, 128, 255);
 $bg-layer: rgb(20, 30, 40);
-$color-about: #6B00F0;
+$color-about: #DEFF00;
 $color-skills: #0DB500;
+$color-contact: #6B00F0;
 //--------------------------------------------
 *
 {
@@ -102,7 +103,7 @@ a, a:hover, a:link, a:visited
 		border: 2px solid $color-logo;
 		transform: scaleY(0);
 		transition: 0.2s all;
-		box-shadow: inset -4px -4px 4px black, inset 0 1px 0 rgba(255, 255, 255, 0.75);
+		box-shadow: inset -1px -1px 1px black, inset 0 1px 0 rgba(255, 255, 255, 0.75);
 	}
 	&:hover::before
 	{
@@ -244,12 +245,13 @@ a, a:hover, a:link, a:visited
 }
 .page-layer-3
 {
+	background: lighten($bg-layer, 2%);
 	.layer-head::after
 	{
 		background: $color-skills;
 	}
 }
-.page-layer-2, .page-layer-3
+.page-layer-2, .page-layer-3, .page-layer-5
 {
 	.layer-head
 	{
@@ -401,6 +403,41 @@ a, a:hover, a:link, a:visited
 		border: 2px solid darken($symfony-color, 5%);
 	}
 }
+.ticks
+{
+	display: flex;
+	flex-flow: row wrap;
+
+	.tick
+	{
+		color: white;
+		margin: auto;
+		font-size: 2em;
+		font-family: $font-nav;
+		position: relative;
+		padding-bottom: 0.25em;
+		cursor: default;
+
+		&::after
+		{
+			content: "";
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			width: 100%;
+			height: 2px;
+			background: $color-skills;
+			transform: scaleX(0);
+			transform-origin: 0 0;
+			transition-timing-function: cubic-bezier(.98, .27, .48, .96);
+			transition: 0.5s all;
+		}
+		&:hover::after
+		{
+			transform: scaleX(1);
+		}
+	}
+}
 .page-layer-4
 {
 	background: url(../images/bg-works.jpg) fixed;
@@ -409,10 +446,10 @@ a, a:hover, a:link, a:visited
 
 	& > div > a
 	{
-		background: $bg-layer;
+		background: lighten($bg-layer, 5%);
 		border: 1px solid black;
 		border-radius: 100%;
-		margin: auto;
+		margin: 0.5em auto;
 		padding: 2em;
 		font-size: 2em;
 		transition: $transition;
@@ -443,7 +480,7 @@ a, a:hover, a:link, a:visited
 		&:hover
 		{
 			transform: scale3d(1.05, 1.05, 1.05);
-			background: lighten($bg-layer, 2%);
+			background: lighten($bg-layer, 10%);
 			span
 			{
 				transform: translateY(0);
@@ -451,6 +488,98 @@ a, a:hover, a:link, a:visited
 			.img
 			{
 				transform: translateY(100%);
+			}
+		}
+	}
+}
+.page-layer-5
+{
+	background: darken($bg-layer, 4%);
+
+	.layer-head::after
+	{
+		background: $color-contact;
+	}
+	.form-contact
+	{
+		.input-block
+		{
+			margin: 2em 0;
+			position: relative;
+		}
+		.input-field
+		{
+			width: 100%;
+			background: none;
+			border: 1px solid rgba(255, 255, 255, 0.25);
+			font-size: 2em;
+			outline: none;
+			padding: 0.1em 0.25em;
+			transition: 0.4s all;
+			color: white;
+			border-radius: 4px;
+		}
+		.input-field:focus
+		{
+			background: rgba($color-contact, 0.08);
+		}
+		.active-line
+		{
+			position: absolute;
+			left: 2px;
+			bottom: 0;
+			width: calc(100% - 4px);
+			border-radius: 4px;
+			height: 2px;
+			background: $color-contact;
+			transition: 0.6s all;
+			transform: scaleX(0);
+			transform-origin: 0 0;
+		}
+		textarea + .active-line
+		{
+			bottom: 5px;
+		}
+		.input-field:focus + .active-line
+		{
+			transform: scaleX(1);
+		}
+		.i-submit
+		{
+			color: lighten($color-contact, 20%);
+			background: none;
+			padding: 1em 2em;
+			font-size: 1.5em;
+			border: 2px solid lighten($color-contact, 5%);
+			position: relative;
+			transition: 0.5s all;
+			overflow: hidden;
+			border-radius: 4px;
+			text-transform: uppercase;
+			z-index: 1;
+
+			&::after
+			{
+				content: '';
+				position: absolute;
+				left: -20%;
+				top: -30%;
+				width: 140%;
+				height: 160%;
+				background: rgba($color-contact, 0.5);
+				transform: scaleY(0);
+				transition: $transition;
+				border-radius: 100%;
+				z-index: -1;
+			}
+			&:hover
+			{
+				color: white;
+				border-color: rgba($color-contact, 0.5);
+			}
+			&:hover::after
+			{
+				transform: scaleY(1);
 			}
 		}
 	}
@@ -531,11 +660,52 @@ a, a:hover, a:link, a:visited
 		margin-top: 5em!important;
 		margin-bottom: 2em;
 	}
-	.main-nav ul li
+	.main-nav
 	{
-		display: block;
-		width: 100%;
-		text-align: center;
+		position: absolute;
+
+		& > *
+		{
+			margin: auto;
+		}
+
+		ul li
+		{
+			display: block;
+			width: 100%;
+			text-align: center;
+		}
+		.mobile-menu-toggle
+		{
+			background: transparent;
+			border: none;
+			padding: 0.3em 0 0 0;
+			font-size: 2.5em;
+			text-align: center;
+			color: $color-logo;
+		}
+	}
+}
+@media( max-width: 480px)
+{
+	.page-layer
+	{
+		padding: 1em 0.5em;
+
+		.layer-head
+		{
+			font-size: 2em;
+		}
+	}
+	.home-block
+	{
+		margin-top: 10em;
+
+		padding: 5em 0.5em;
+		h3
+		{
+			font-size: 1.5em;
+		}
 	}
 }
 @keyframes pulseDown
